# specification-by-example

./: README.md
.devcontainer/: Dockerfile
.github/workflows/: ci.yml
hra_tax_exemption/: CMakeLists.txt  CmakeLists.txt
hra_tax_exemption/include/: exemption_calculator.h  rent.h  salary.h
hra_tax_exemption/include/excemption_calculator/: exemption_calculator.h
hra_tax_exemption/src/: exemption_calculator.cpp  rent.cpp  salary.cpp
hra_tax_exemption/tests/: exemption_tests.cpp  rent_tests.cpp  salary_tests.cpp
